<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/abstract_blue"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".fragments.LangsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_xlarge"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:text="@string/langs_english"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/langs_english_level"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#FFFFFF" />

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:indeterminate="false"
            android:max="100"
            android:progress="100"
            android:progressDrawable="@drawable/progressbar_green_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:text="@string/langs_portuguese"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/langs_portuguese_level"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#FFFFFF" />

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:indeterminate="false"
            android:max="100"
            android:progress="60"
            android:progressDrawable="@drawable/progressbar_blue_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:text="@string/langs_russian"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/langs_russian_level"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#FFFFFF" />

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:indeterminate="false"
            android:max="100"
            android:progress="20"
            android:progressDrawable="@drawable/progressbar_red_round" />

    </LinearLayout>

</LinearLayout>