<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/abstract_blue"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".fragments.EducationFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/spacing_medium">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:visibility="visible"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:gravity="center_vertical"
                        android:minHeight="?attr/actionBarSize"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="@dimen/spacing_xlarge"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/txtEduTitle_0"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:text="@string/edu_utn_pji"
                            android:textColor="@color/colorPrimaryText" />

                        <ImageView
                            android:id="@+id/bt_toggle_text_0"
                            android:layout_width="?attr/actionBarSize"
                            android:layout_height="?attr/actionBarSize"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:tint="@color/grey_90"
                            app:srcCompat="@drawable/ic_expand_arrow" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lyt_expand_text_0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtEduDates0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryText"
                            android:text="@string/edu_utn_dates" />

                        <TextView
                            android:id="@+id/txtEduDetail0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/spacing_medium"
                            android:textColor="@color/colorPrimaryText"
                            android:text="@string/edu_utn_detail" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey_10" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/bt_hide_text_0"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/hide" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:visibility="visible"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:gravity="center_vertical"
                        android:minHeight="?attr/actionBarSize"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="@dimen/spacing_xlarge"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/txtEduTitle1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:text="@string/edu_uni_uk"
                            android:textColor="@color/colorPrimaryText" />

                        <ImageView
                            android:id="@+id/bt_toggle_text_1"
                            android:layout_width="?attr/actionBarSize"
                            android:layout_height="?attr/actionBarSize"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:tint="@color/grey_90"
                            app:srcCompat="@drawable/ic_expand_arrow" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lyt_expand_text_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtEduDates1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryText"
                            android:text="@string/edu_uni_uk_dates" />

                        <TextView
                            android:id="@+id/txtEduDetail1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/spacing_medium"
                            android:textColor="@color/colorPrimaryText"
                            android:text="@string/edu_uni_uk_detail" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey_10" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/bt_hide_text_1"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/hide" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:visibility="visible"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:gravity="center_vertical"
                        android:minHeight="?attr/actionBarSize"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="@dimen/spacing_xlarge"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/txtEduTitle2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:text="@string/edu_uni_comodoro"
                            android:textColor="@color/colorPrimaryText" />

                        <ImageView
                            android:id="@+id/bt_toggle_text_2"
                            android:layout_width="?attr/actionBarSize"
                            android:layout_height="?attr/actionBarSize"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:tint="@color/grey_90"
                            app:srcCompat="@drawable/ic_expand_arrow" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lyt_expand_text_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtEduDates2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryText"
                            android:text="@string/edu_uni_comodoro_dates" />

                        <TextView
                            android:id="@+id/txtEduDetail2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/spacing_medium"
                            android:textColor="@color/colorPrimaryText"
                            android:text="@string/edu_uni_comodoro_detail" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey_10" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/bt_hide_text_2"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/hide" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>